$ npm install nodemailer; $ npm install --save-dev @types/nodemailer; $ npm install --save-dev @swc/cli; $ npm exec -- nest generate service Yoummday; typescript strict; robot script - fetch and execute;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,22 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    //"strictNullChecks": false,
+    //"noImplicitAny": false,
+    //"strictBindCallApply": false,
+    //"forceConsistentCasingInFileNames": false,
+    //"noFallthroughCasesInSwitch": false,
+
+    // nest new project --strict
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "strictBindCallApply": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+
+    //
+    "allowJs": true,
+    //"strict": true,
+    //"alwaysStrict": true
   }
 }
